# tribonian_test

./: Cargo.toml  config.yaml  summary.md  summary20.md
input/: test2.txt
input - Copy/: test1.txt
src/: api.rs  config.rs  file_processor.rs  logger.rs  main.rs  summary.rs
